# plotgui

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  package.xml
include/: PlotGui.h  RosScope.hpp  ScopeGui.h
include/plotgui/: PlotGui.h  ScopeGui.h
src/: PlotGui.cpp  PlotGuiDevam.cpp  RosScope.cpp  ScopeGui.cpp  plotgui.ui  qcustomplot.cpp  ros_scope.cpp
test/: plotTest.cpp  scopeTest.cpp  subPlotTest.cpp  test.cpp
test/config/: trial_topics.yaml
test/launch/: ros_scope_test.launch
