<?xml version="1.0"?>
<package format="2">
  <name>plotgui</name>
  <version>0.0.0</version>
  <description>This package to build necessary stuff</description>

  <maintainer email="m.efetiryaki@gmail.com">Mehmet Efe Tiryaki</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>eigen</depend>
  <depend>ros_node_utils</depend>

</package>
